# fastapi-project-template

./: pyproject.toml
