[tool.poetry]
name = "fastapi-project-template"
version = "0.1.0"
description = ""
authors = ["dyussenov <dyusenov.aset.arm@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_project_template"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
